# bachelor

./: CMakeLists.txt  bachelor.kdev4  bitset_replacement.cpp  compare.sh  constants.h  convolute.cpp  data_to_file.sh  easy_hamiltonian.sh  easy_runner.sh  eigen_h+s.cpp  experiment.h  hamiltonian+selection.cpp  hs_runner.sh  main.cpp  mpi_iface.h  mpi_main.cpp  mpi_master.cpp  mpi_master.h  mpi_slave.cpp  mpi_slave.h  orca_to_data.sh  plot_data.sh  plot_folder.sh  resonancefield.cpp  resonancefield.h  run_and_plot_intensity.sh  sample-jobfile  server.cpp  spinhamiltonian.cpp  spinhamiltonian.h  test_eigen.cpp  test_gsl.cpp  types.h
broaden/: CMakeLists.txt  broaden.c
cmake/: FindEigen3.cmake  FindFFTW.cmake  FindMKL.cmake  OptimizeForArchitecture.cmake
convolute/: CMakeLists.txt  main.cpp
dbg/: CMakeLists.txt  bench_eigen.cpp  bench_mkl.cpp  bench_shared.h  euler.cpp  grid.cpp  hamiltonian.cpp  memcheck.cpp  orca.cpp  orca2easy.cpp  orca2orca.cpp  resfield.cpp
install/share/pkgconfig/: eigen3.pc
lebedev/: CMakeLists.txt  lebedev.c
mpi/: CMakeLists.txt  main.cpp  mpi_iface.cpp  mpi_job.cpp  mpi_job.h  mpi_master.cpp  mpi_master.h  mpi_slave.cpp  mpi_slave.h  mpi_types.h
non-mpi/: CMakeLists.txt  main.cpp
powder/: CMakeLists.txt  powder.c
spinlib/: CMakeLists.txt  constants.h  eigentypes.h  experiment.cpp  experiment.h  fptype.h  helpers.cpp  helpers.h  nucleus.h  operatorsum_p.h  orcaparser.cpp  orcaparser.h  resonancefield.cpp  resonancefield.h  spinhamiltonian.cpp  spinhamiltonian.h  spins.h
test-orca-data/: a-test.orca  a-test2.orca  g-test.orca  n-test.orca  q-test.orca  q-test2.orca  q-test3.orca  q-test4.orca  q-test5.orca  q-test6.orca  q-test7.orca  singleproton.orca  water-test1.orca  water-test2.orca  water-test3.orca  water-test4.orca  water-test5.orca
